--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,11 @@
 <html lang='en'>
   <head>
     <meta charset='UTF-8'>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name=“viewport” content="width=device-width,initial-scale=1">
     <title>Authors Haven</title>
     <base href="/" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </head>
   <body>
     <div id='app'></div>
