--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,12 @@
 <html lang='en'>
   <head>
     <meta charset='UTF-8'>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Authors Haven</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
   </head>
   <body>
     <div id='app'></div>
+    <script defer src="https://use.fontawesome.com/releases/v5.5.0/js/all.js" integrity="sha384-GqVMZRt5Gn7tB9D9q7ONtcp4gtHIUEW/yG7h98J7IpE3kpi+srfFyyB/04OV6pG0" crossorigin="anonymous"></script>
   </body>
 </html>
