--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset='UTF-8'>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Authors Haven</title>
+    <base href="/" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
   </head>
   <body>
